[tool.poetry]
name = "llm-serving"
version = "0.1.0"
description = ""
authors = ["juhwanlee <juhwanlee@diquest.com>"]
readme = "README.md"
packages = [{include = "llm_serving"}]

[tool.poetry.dependencies]
python = "~3.10"
torch = "2.0.0"
pandas = "2.0.0"
transformers = "4.38.2"
langchain = "^0.2.5"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
